# pegion-defence

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
playground/: detection.py
scripts/: fake-webcam.sh  install.sh  rtsp-stream.sh  srt-stream.sh
workspaces/pd-api/: pd-api.spec  pd_api.spec  pyproject.toml
workspaces/pd-api/config/: pd-api.service
workspaces/pd-api/pd_api/: main.py
workspaces/pd-api/scripts/: build.sh  install.sh
workspaces/pd-daemon/: TODO.md  pd-daemon.spec  pyproject.toml
workspaces/pd-daemon/config/: pd-daemon.service
workspaces/pd-daemon/models/yolov8n_ncnn_model/: metadata.yaml
workspaces/pd-daemon/pd_daemon/: __main__.py
workspaces/pd-daemon/pd_daemon/utils/: __init__.py
workspaces/pd-daemon/scripts/: build.sh  extract-model.py  install.sh
workspaces/pd-frontend/: TODO.md
workspaces/pd-frontend/config/nginx/: nginx.conf
workspaces/pd-frontend/public/: index.html
workspaces/pd-frontend/scripts/: install.sh  serve.sh
workspaces/pd-node/: pd-node.spec  pyproject.toml
workspaces/pd-node/config/: pd-node.service
workspaces/pd-node/pd_node/: __main__.py
workspaces/pd-node/pd_node/api/: __init__.py  (+2 more)
workspaces/pd-node/scripts/: build.sh  install.sh
workspaces/rpi-node/: README.md  TODO.md  pyproject.toml  rpi-node-api.service.template  rpi-node.service.template
workspaces/rpi-node-python/: README.md  TODO.md  rpi-node-api.service.template
workspaces/rpi-node-python/rpi_node/: __main__.py
workspaces/rpi-node-python/yolov8n_ncnn_model/: metadata.yaml
workspaces/rpi-node/rpi_node/: __main__.py  api.py
(+41 files in other folders)
