[project]
name = "pd-daemon"
version = "0.1.0"
description = "Defend the Pigeons!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linuxpy>=0.24.0",
    "ncnn>=1.0.20260114",
    "opencv-python>=4.13.0.92",
    "rpi-gpio>=0.7.1 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "ultralytics==8.4.39",
]

[dependency-groups]
dev = [
    "pnnx>=20260409",
    "pyinstaller>=6.19.0",
]
